GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/Staff_and_duty_travel__c.object-meta.xml
<CustomObject>
    <description>This object will be used for the staff travel and the duty travel. It will have two record types, one for staff travel and one for duty travel.</description>
    <label>Staff and duty travel</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Travel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff and duty travels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>