GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Additional_passengers__c.field-meta.xml
<CustomField>
    <fullName>Additional_passengers__c</fullName>
    <description>This field will be used if there are additional passengers when the 6 possible are not enough</description>
    <inlineHelpText>List of the additional passengers:
Last name, First name, Dependant/Not Dependant, Dietary requirement if needed</inlineHelpText>
    <label>Additional passengers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>