GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Associated_account__c.field-meta.xml
<CustomField>
    <fullName>Associated_account__c</fullName>
    <description>This field will be used to link the travel to a customer or staff account (if it doesn&#39;t exist whn the travel is created, the account will be created as well).</description>
    <label>Associated account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staff and duty travels</relationshipLabel>
    <relationshipName>Staff_and_duty_travels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>