GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Blue_Voucher_Booking__c.field-meta.xml
<CustomField>
    <fullName>Blue_Voucher_Booking__c</fullName>
    <formula>ISPICKVAL( Type_of_booking__c ,&quot;Eurostar Staff Voucher&quot;)
||
(ISPICKVAL( Type_of_booking__c ,&quot;Pals&quot;)
&amp;&amp;
Number_of_Vouchers__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blue Voucher Booking</label>
    <type>Checkbox</type>
</CustomField>