GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Blue_Voucher_Status__c.field-meta.xml
<CustomField>
    <fullName>Blue_Voucher_Status__c</fullName>
    <formula>IF( 
AND(
RecordTypeId = &quot;012b0000000g3vn&quot;, Blue_vouchers_received__c = FALSE, Blue_Voucher_Booking__c = TRUE, ISPICKVAL(Status_of_the_booking__c,&quot;Created&quot;)), 
TEXT(Number_of_Vouchers__c)+ &quot; &quot; + &quot;Vouchers Outstanding&quot;,

IF( 
AND(
RecordTypeId = &quot;012b0000000g3vn&quot;, Blue_vouchers_received__c = TRUE, Blue_Voucher_Booking__c = TRUE, ISPICKVAL(Status_of_the_booking__c,&quot;Created&quot;)), &quot;Vouchers Received&quot;,

IF(
AND(
RecordTypeId = &quot;012b0000000g3vn&quot;,ISPICKVAL(Status_of_the_booking__c,&quot;Cancelled&quot;)),
&quot;Booking Cancelled&quot;, NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blue Voucher Status</label>
    <type>Text</type>
</CustomField>