GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Booking_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancelled_Date__c</fullName>
    <description>Has a date stamp which reflects the date the booking was cancelled on</description>
    <label>Booking Cancelled Date</label>
    <type>Date</type>
</CustomField>