GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Card_Payment__c</fullName>
    <label>Card Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>