GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Chasing_Emails_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Chasing_Emails_Tracker__c</fullName>
    <label>Chasing Emails Tracker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>