GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Class_Outward_2__c.field-meta.xml
<CustomField>
    <fullName>Class_Outward_2__c</fullName>
    <description>This field will used to choose the outward class for the second choice of journey.</description>
    <label>Class (Outward)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Business Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>