GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Class_Return_2__c.field-meta.xml
<CustomField>
    <fullName>Class_Return_2__c</fullName>
    <description>This field will be used for the class of the second choice for the return journey</description>
    <label>Class (Return)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Premier</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>