GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Class_Return__c.field-meta.xml
<CustomField>
    <fullName>Class_Return__c</fullName>
    <description>This field will be used for the class of the return journey.</description>
    <label>Class (Return)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Business Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>