GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Created_this_month__c.field-meta.xml
<CustomField>
    <fullName>Created_this_month__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is checked per default, it becomes unchecked at the beginning of the following month.</description>
    <label>Created this month?</label>
    <type>Checkbox</type>
</CustomField>