GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Created_this_year__c.field-meta.xml
<CustomField>
    <fullName>Created_this_year__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is checkd if the record was created in the current year, it becomes unchecked on the following 1st january.</description>
    <label>Created this year?</label>
    <type>Checkbox</type>
</CustomField>