GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Departure_Date_Outward__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Outward__c</fullName>
    <description>This field will be used for the Departure Date.</description>
    <label>Departure Date (Outward)</label>
    <type>Date</type>
</CustomField>