GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Departure_Date_Return__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Return__c</fullName>
    <description>This field will be used for the Departure Date of the return journey.</description>
    <label>Departure Date (Return)</label>
    <type>Date</type>
</CustomField>