GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Departure_Time_Return_2__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Return_2__c</fullName>
    <description>This field will be used for the departure time of the return journey of the second choice of travel.</description>
    <inlineHelpText>Please choose a time slot. You can add more precision in Preferences if needed.</inlineHelpText>
    <label>Departure Time (Return) 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7am-9am</fullName>
            </value>
            <value>
                <fullName>9am-11am</fullName>
            </value>
            <value>
                <fullName>11am-1pm</fullName>
            </value>
            <value>
                <fullName>1pm-3pm</fullName>
            </value>
            <value>
                <fullName>3pm-5pm</fullName>
            </value>
            <value>
                <fullName>5pm-7pm</fullName>
            </value>
            <value>
                <fullName>7pm-9pm</fullName>
            </value>
            <value>
                <fullName>9pm-11pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>