GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Departure_Time_Return__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Return__c</fullName>
    <description>This field will be used for the departure time of the return journey.</description>
    <label>Departure Time (Return)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>