GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Dietary_Requirements_1__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements_1__c</fullName>
    <description>This field will be used for the dietary requirements of the first passenger</description>
    <label>Dietary Requirements 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Diabetic</fullName>
            </value>
            <value>
                <fullName>Low fat</fullName>
            </value>
            <value>
                <fullName>Low salt</fullName>
            </value>
            <value>
                <fullName>Gluten free</fullName>
            </value>
            <value>
                <fullName>Child meal</fullName>
            </value>
            <value>
                <fullName>Dairy free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>