GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/ESV_Voucher_Used__c.field-meta.xml
<CustomField>
    <fullName>ESV_Voucher_Used__c</fullName>
    <label>Number of Vouchers Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>