GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/From_Return_Aria__c.field-meta.xml
<CustomField>
    <fullName>From_Return_Aria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the departure station of a return journey of a staff travel for Aria</description>
    <label>From (Return)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Staff and duty travels (From (Return))</relationshipLabel>
    <relationshipName>Staff_and_duty_travels_From_return</relationshipName>
    <type>Lookup</type>
</CustomField>