GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Is_passenger_4_a_dependent_child__c.field-meta.xml
<CustomField>
    <fullName>Is_passenger_4_a_dependent_child__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to check if the fourth passenger is a dependent child</description>
    <inlineHelpText>Children can be included when they reach the age of 4 only when the main traveller is either the employee to whom the voucher is issued or the spouse/equivalent.
They are considered dependants provided they remain in full time education to the age of 24.</inlineHelpText>
    <label>Is passenger 4 a dependent child?</label>
    <type>Checkbox</type>
</CustomField>