GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Nb_of_passengers__c.field-meta.xml
<CustomField>
    <fullName>Nb_of_passengers__c</fullName>
    <description>This field will be used to know the number of passenger.</description>
    <label>Nb of passengers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>More than 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>