GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Non_UK_Based__c.field-meta.xml
<CustomField>
    <fullName>Non_UK_Based__c</fullName>
    <formula>Associated_account__r.Non_UK_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-UK Based</label>
    <type>Checkbox</type>
</CustomField>