GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/NonUKemployee__c.field-meta.xml
<CustomField>
    <fullName>NonUKemployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staff and duty travels (Account)</relationshipLabel>
    <relationshipName>Staff_and_duty_travels1</relationshipName>
    <type>Lookup</type>
</CustomField>