GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Number_of_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vouchers__c</fullName>
    <label>Number of Vouchers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>