GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Number_of_Vouchers_to_Refund__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vouchers_to_Refund__c</fullName>
    <label>Number of Vouchers to Refund</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>