GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/One_way_2__c.field-meta.xml
<CustomField>
    <fullName>One_way_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to say if the second choice of travel is a one way or if there is a return journey.</description>
    <label>One way</label>
    <type>Checkbox</type>
</CustomField>