GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/One_way__c.field-meta.xml
<CustomField>
    <fullName>One_way__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to say if the travel will be a one way travel or if there is a return travel.</description>
    <label>One way</label>
    <type>Checkbox</type>
</CustomField>