GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Pass_number_prefix__c.field-meta.xml
<CustomField>
    <fullName>Pass_number_prefix__c</fullName>
    <label>Pass number prefix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A-0-</fullName>
            </value>
            <value>
                <fullName>E-0-</fullName>
            </value>
            <value>
                <fullName>S-0-</fullName>
            </value>
            <value>
                <fullName>T-0-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>