GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Passenger_1_last_name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_1_last_name__c</fullName>
    <description>This field will be used for the last name of the first passenger.</description>
    <label>Passenger 1 last name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>