GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Passenger_2_last_name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_2_last_name__c</fullName>
    <description>This field will be used for the last name of the second passenger.</description>
    <label>Passenger 2 last name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>