GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Passenger_4_first_name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_4_first_name__c</fullName>
    <description>This field will be used for the first name of the fourth passenger.</description>
    <label>Passenger 4 first name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>