GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <description>This field will be used for the PNR.</description>
    <label>PNR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>