GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <description>This will be used to let the staff travel team know what to do if the choices of travel aren&#39;t available.</description>
    <inlineHelpText>If your first or second choice are not available, would you like us to book? (approval will be sought before booking confirmed)</inlineHelpText>
    <label>Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>