GearsetPOC/force-app/main/default/objects/Staff_and_duty_travel__c/fields/Seating_requirements_Outward_2__c.field-meta.xml
<CustomField>
    <fullName>Seating_requirements_Outward_2__c</fullName>
    <description>This field will be used to describe if there is any seating requirements for the outward journey for the second choice of travel.</description>
    <label>Seating requirements (Outward)</label>
    <type>TextArea</type>
</CustomField>